# DoubleLoopControllers

./: CMakeLists.txt  NOTICE  README.md  contributors.txt
data/: SimplePendulumMechanism.osim  dcmotor.xml  desired_step.mot  pendulum_DLPI_forward.xml  pendulum_initialState.sto
lib/: CMakeLists.txt  ConfigurationInterpreter.cpp  ConfigurationInterpreter.h  DoubleLoopPIController.cpp  DoubleLoopPIController.h  RegisterTypes_osimDoubleLoopControllers.cpp  RegisterTypes_osimDoubleLoopControllers.h  SimulationManager.cpp  SimulationManager.h
src/: CMakeLists.txt  simulate.cpp
