# Copyright 2015 Luca Tagliapietra, Elena Ceseracciu, Monica Reggiani
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

project (DLcontrollerSim)

include_directories(${OPENSIM_INCLUDE_DIRS} ${SIMTK_INCLUDE_DIRS})
include_directories(${SimulationManager_INCLUDE_DIRS})
include_directories(${DoubleLoopController_INCLUDE_DIRS})

set(ankleAttachment_SIMULATOR_SOURCE_FILES simulate.cpp)

source_group("Sources" FILES ${ankleAttachment_SIMULATOR_SOURCE_FILES})

add_executable(ankleAttachmentSimulator ${ankleAttachment_SIMULATOR_SOURCE_FILES})
target_link_libraries(ankleAttachmentSimulator DoubleLoopController SimulationManager ${OPENSIM_LIBRARIES})
